--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: rust
 cache: cargo
+before_script:
+  - rustup component add clippy
+script:
+  - cargo clippy -- -D warnings
+  - cargo test
