--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: rust
 cache: cargo
+before_script:
+  - rustup component add clippy
+script:
+  - cargo clippy -- -D warnings
+  - cargo test
+branches:
+  only:
+    - master
