--- a/crates/klopodavka-console/Cargo.toml
+++ b/crates/klopodavka-console/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 authors = ["Pavel Tupitsyn <ptupitsyn@apache.org>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+klopodavka-lib = { path = "../klopodavka-lib" }
