--- a/crates/klopodavka-wasm/www/package.json
+++ b/crates/klopodavka-wasm/www/package.json
@@ -30,9 +30,9 @@
     "klopodavka-wasm": "file:../pkg"
   },
   "devDependencies": {
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "copy-webpack-plugin": "^5.0.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.1.5"
   }
 }
