--- a/crates/klopodavka-yew/Cargo.toml
+++ b/crates/klopodavka-yew/Cargo.toml
@@ -1,16 +1,8 @@
 [package]
-authors = [
-    "Kelly Thomas Kline <kellytk@sw-e.org>",
-    "Samuel Rounce <me@samuelrounce.co.uk>"
-]
-categories = ["gui", "wasm", "web-programming"]
-description = "yew-wasm-pack-minimal demonstrates the minimum code and tooling necessary for a frontend web app with simple deployable artifacts consisting of one HTML file, one JavaScript file, and one WebAssembly file, using Yew, wasm-bindgen, and wasm-pack."
+authors = ["Pavel Tupitsyn <ptupitsyn@apache.org>"]
 edition = "2018"
-keywords = ["yew", "wasm", "wasm-bindgen", "web"]
-license = "MIT/Apache-2.0"
-name = "yew-wasm-pack-minimal"
+name = "klopodavka-yew"
 readme = "README.md"
-repository = "https://github.com/yewstack/yew-wasm-pack-minimal"
 version = "0.1.0"
 
 [lib]
@@ -19,3 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "^0.2"
 yew = "0.12"
+klopodavka-lib = { path = "../klopodavka-lib" }
