--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 members = [
     "crates/klopodavka-lib",
     "crates/klopodavka-console",
+    "crates/klopodavka-wasm",
+    "crates/klopodavka-yew",
 ]
 
 [profile.release]
 codegen-units = 1
 panic = 'abort'
 lto = true
+opt-level = "s"
