--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ script:
 branches:
   only:
     - master
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
