Adding automatic deployment with Travis to GitHub pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_script:
 script:
   - cargo clippy -- -D warnings
   - cargo test
+  - cd ./crates/klopodavka-yew/ && ./build.sh
+
 branches:
   only:
     - master
