--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,21 @@ language: rust
 cache: cargo
 before_script:
   - rustup component add clippy
+  - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 script:
   - cargo clippy -- -D warnings
   - cargo test
+  - cd ./crates/klopodavka-yew/ && ./build.sh --skip-rollup
+
 branches:
   only:
     - master
+
+deploy:
+  provider: pages
+  local_dir: crates/klopodavka-yew/publish
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
